Changes
=======

1.0.25 (TBD)
------------

- Add support for GDAL 3.x
- We were using pytest incorrectly and pytest 5 caught us doing it. This is
  now fixed in commit b9f34ee.
- A bug preventing creation of Env instances, and thus dataset opening, when
  AWS credentials exist in the environment but boto3 is unavailable has been
  fixed (#1708).

1.0.24 (2019-06-05)
-------------------

- By default GDAL reuses existing dataset connections when possible.
  Multi-threaded programs must avoid this as must programs that re-open
  datasets in a different context, such as the overview-seeking program shown
  in issue #1504. The sharing keyword argument of rasterio.open() was supposed
  to allow users to disable connection reuse on a case-by-case basis, but the
  implementation was faulty and connection reuse persisted (#1701). This has
  been fixed in PR #1704.

1.0.23 (2019-05-15)
-------------------

- Break rio-calc output into chunks of user-specified size to constrain the
  amount of memory used (#1668).
- Attempts to set attributes of datasets opened in "r" mode now raise a custom
  DatasetAttributeError. This exception derives from both RasterioError and
  NotImplementedError, which maintains backwards compatibility (#1676).
- Block sizes are no longer guarded when creating untiled datasets (#1689).
- CRS objects are now hashable and equivalent CRS objects have the same hash
  value (#1684).
- Allow AWS regions to be specified no matter the signing of requests (#1670).
- Add links to API documentation from the Python quickstart guide.
- Use "CRS.from_epsg({})" instead of "CRS.from_dict(init='epsg:{}')" as the
  representation for CRS objects that are completely described by an EPSG code.
- Use GDAL's string parsing to get metadata item keys and values, which
  accommodates uncommon "KEY:VALUE" forms.

1.0.22 (2019-03-20)
-------------------

- Add JPEG2000 to enums.Compression so that the compression of JP2 files can be
  reported (#1654).