@@ -193,3 +193,6 @@ cdef int io_multi_mask(
 cdef const char* osr_get_name(OGRSpatialReferenceH hSrs):
     return ''
 
+
+cdef void osr_set_traditional_axis_mapping_strategy(OGRSpatialReferenceH hSrs):
+    pass
