@@ -73,3 +73,6 @@ cdef int delete_nodata_value(GDALRasterBandH hBand) except 3:
 
 cdef const char* osr_get_name(OGRSpatialReferenceH hSrs):
     return ''
+
+cdef void osr_set_traditional_axis_mapping_strategy(OGRSpatialReferenceH hSrs):
+    pass
